syntax = "proto3";

package authn;

option go_package = "github.com/hobbyfarm/gargantua/protos/authn";

// import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "user/user.proto";

// Service definition
service AuthN {
    rpc AuthN (AuthNRequest) returns (user.User);
}

message AuthNRequest {
    string token = 1;
}

// message AuthNResponse {
//     string kind = 1;
//     string apiVersion = 2;
//     k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 3;
//     user.User user = 4;
// }